# sysml-cli

./: CONTRIBUTING.md  Cargo.toml  README.md  cli_expansion.md
.github/workflows/: ci.yml  release.yml
crates/sysml-bom/: Cargo.toml
crates/sysml-bom/src/: lib.rs
crates/sysml-capa/: Cargo.toml
crates/sysml-capa/src/: capa.rs  deviation.rs  enums.rs  lib.rs  ncr.rs  rca.rs  trend.rs
crates/sysml-cli/: Cargo.toml
crates/sysml-cli/src/: cli.rs  helpers.rs  main.rs  model_writer.rs  records.rs  wizard.rs
crates/sysml-cli/src/commands/: add.rs  allocation.rs  bom.rs  check.rs  coverage.rs  deps.rs  diagram.rs  diff.rs  doc.rs  edit.rs  export.rs  fmt.rs  index.rs  init.rs  interfaces.rs  lint.rs  list.rs  mod.rs  new.rs  pipeline.rs  quality.rs  remove.rs  rename.rs  repl.rs  rollup.rs  scaffold.rs  show.rs  simulate.rs  source.rs  stats.rs  trace.rs
crates/sysml-cli/tests/: cli.rs
crates/sysml-core/: Cargo.toml  build.rs
crates/sysml-core/src/: cache.rs  config.rs  diagnostic.rs  index.rs  lib.rs  model.rs  parser.rs  project_model.rs  query.rs  resolver.rs  sqlite_cache.rs  stdlib.rs
crates/sysml-core/src/checks/: imports.rs  mod.rs  multiplicity.rs  ports.rs  references.rs
crates/sysml-core/src/codegen/: format.rs  mod.rs  template.rs
crates/sysml-core/src/diagram/: builders.rs  emitters.rs
crates/sysml-core/src/sim/: action_exec.rs  action_flow.rs  action_parser.rs  analysis.rs  eval.rs  mod.rs  rollup.rs  units.rs  what_if.rs
crates/sysml-core/tests/: integration.rs
crates/sysml-lsp/: build.rs
crates/sysml-lsp/src/: completion.rs  semantic_tokens.rs  type_hierarchy.rs
crates/sysml-mfg/src/: lib.rs
crates/sysml-report/src/: lib.rs
crates/sysml-risk/src/: lib.rs
crates/sysml-source/src/: lib.rs
crates/sysml-tol/src/: lib.rs
crates/sysml-verify/src/: lib.rs
docs/: architecture.md  ci-integration.md  domain-libraries.md  tutorial.md  validation.md
docs/commands/: lifecycle.md  project.md
libraries/: sysml-capa.sysml
src/: diagnostic.rs  lib.rs  main.rs  model.rs  parser.rs
test/fixtures/: diagram_test.txt
tests/: integration.rs
