[package]
name = "sysml2-cli"
version = "0.2.0"
edition = "2021"
description = "SysML v2 model validator, simulator, and FMI export tool"
license = "GPL-3.0-or-later"
repository = "https://github.com/jackhale98/sysml-lint"

[dependencies]
tree-sitter = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"

[[bin]]
name = "sysml2-cli"
path = "src/main.rs"
